sentiment analysis with distilBERT-base-uncased and aggregated sentiment by bank and rating

--- a/notebooks/boa_analytics.ipynb
+++ b/notebooks/boa_analytics.ipynb
@@ -2,37 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cb70ff9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "19489c8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\elsha\\OneDrive\\Documents\\10Acadamy Assignments\\week-2\\Omega-Consultancy\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get the absolute path to the data directory\n",
-    "abs_dir = os.path.abspath(os.path.dirname(os.getcwd()))\n",
-    "print(abs_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "1f95dc49",
    "metadata": {},
@@ -550,6 +519,25 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03cfa5b",
+   "metadata": {},
+   "source": [
+    "# Task 2\n",
+    "Sentiment Analysis - distilbert-base-uncased-finetuned-sst-2-english\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57bbec8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transfomers #distilbert-base-uncased-finetuned-sst-2-english sentiment analysis\n"
    ]
   }
  ],
