--- a/notebooks/cbe_analytics.ipynb
+++ b/notebooks/cbe_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4       5       0  2025-06-05  Commercial Bank of Ethiopia  Google Play  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,18 +200,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>2988.000000</td>\n",
-       "      <td>2988.000000</td>\n",
+       "      <td>4000.000000</td>\n",
+       "      <td>4000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3.876171</td>\n",
-       "      <td>11.073293</td>\n",
+       "      <td>4.110500</td>\n",
+       "      <td>8.488250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.588815</td>\n",
-       "      <td>95.042128</td>\n",
+       "      <td>1.474562</td>\n",
+       "      <td>82.261194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -220,7 +220,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -244,17 +244,17 @@
       ],
       "text/plain": [
        "            rating       upvote\n",
-       "count  2988.000000  2988.000000\n",
-       "mean      3.876171    11.073293\n",
-       "std       1.588815    95.042128\n",
+       "count  4000.000000  4000.000000\n",
+       "mean      4.110500     8.488250\n",
+       "std       1.474562    82.261194\n",
        "min       1.000000     0.000000\n",
-       "25%       3.000000     0.000000\n",
+       "25%       4.000000     0.000000\n",
        "50%       5.000000     1.000000\n",
        "75%       5.000000     1.000000\n",
        "max       5.000000  3025.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data duplicated: 0\n"
+      "data duplicated: 1162\n"
      ]
     },
     {
@@ -341,17 +341,141 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-06-04</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-05-23</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-05-23</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>ok</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-05-22</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>best</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-05-21</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3381</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-02-11</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3396</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-02-11</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3409</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-02-09</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3641</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3682</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-12-30</td>\n",
+       "      <td>Commercial Bank of Ethiopia</td>\n",
+       "      <td>Google Play</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>81 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [review_text, rating, upvote, date, bank_name, source]\n",
-       "Index: []"
+       "     review_text  rating  upvote        date                    bank_name  \\\n",
+       "15          good       5       0  2025-06-04  Commercial Bank of Ethiopia   \n",
+       "74          good       5       0  2025-05-23  Commercial Bank of Ethiopia   \n",
+       "76          good       5       0  2025-05-23  Commercial Bank of Ethiopia   \n",
+       "86            ok       5       0  2025-05-22  Commercial Bank of Ethiopia   \n",
+       "103         best       5       0  2025-05-21  Commercial Bank of Ethiopia   \n",
+       "...          ...     ...     ...         ...                          ...   \n",
+       "3381        Good       5       1  2024-02-11  Commercial Bank of Ethiopia   \n",
+       "3396        Good       5       1  2024-02-11  Commercial Bank of Ethiopia   \n",
+       "3409        Good       5       1  2024-02-09  Commercial Bank of Ethiopia   \n",
+       "3641        Good       5       1  2024-01-05  Commercial Bank of Ethiopia   \n",
+       "3682        Good       5       1  2023-12-30  Commercial Bank of Ethiopia   \n",
+       "\n",
+       "           source  \n",
+       "15    Google Play  \n",
+       "74    Google Play  \n",
+       "76    Google Play  \n",
+       "86    Google Play  \n",
+       "103   Google Play  \n",
+       "...           ...  \n",
+       "3381  Google Play  \n",
+       "3396  Google Play  \n",
+       "3409  Google Play  \n",
+       "3641  Google Play  \n",
+       "3682  Google Play  \n",
+       "\n",
+       "[81 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +514,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +536,7 @@
        "(2988, 6)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,19 +547,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\elsha\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n",
+      "ERROR: Invalid requirement: '#distilBERT-base-uncased,': Expected package name at the start of dependency specifier\n",
+      "    #distilBERT-base-uncased,\n",
+      "    ^\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\elsha\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n",
+      "ERROR: Invalid requirement: '#': Expected package name at the start of dependency specifier\n",
+      "    #\n",
+      "    ^\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install transformers #distilBERT-base-uncased, which helps to classify the reviews\n",
+    "!pip install huggingface_hub[hf_xet] # for downloading the model from Hugging Face, for the purpose of sentiment analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                       review_text  \\\n",
+      "0                                                        really am happy to this app it is Siple to use everything   \n",
+      "1                                I liked this app. But the User interface is very basic and not attractive at all.   \n",
+      "2  \"Why don’t your ATMs support account-to-account transfers like other countries( Kenya, Nigeria , South africa)\"   \n",
+      "3                                                                                      what is this app problem???   \n",
+      "4                                                                     the app is proactive and a good connections.   \n",
+      "\n",
+      "  sentiment_label  sentiment_score  \\\n",
+      "0        POSITIVE         0.998870   \n",
+      "1        NEGATIVE         0.999684   \n",
+      "2        NEGATIVE         0.996465   \n",
+      "3        NEGATIVE         0.999623   \n",
+      "4        POSITIVE         0.999868   \n",
+      "\n",
+      "                                     sentiment_result  \n",
+      "0  {'label': 'POSITIVE', 'score': 0.9988697171211243}  \n",
+      "1  {'label': 'NEGATIVE', 'score': 0.9996840953826904}  \n",
+      "2  {'label': 'NEGATIVE', 'score': 0.9964652061462402}  \n",
+      "3  {'label': 'NEGATIVE', 'score': 0.9996225833892822}  \n",
+      "4  {'label': 'POSITIVE', 'score': 0.9998679161071777}  \n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "# Load the sentiment analysis pipeline\n",
-    "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=\"distilbert-base-uncased-finetuned-sst-2-english\")\n",
+    "# Load the sentiment analysis pipeline,  creates a pipeline for a specific NLP task. In this case, the task is sentiment analysis.\n",
+    "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=\"distilbert-base-uncased-finetuned-sst-2-english\") \n",
+    "#pipline is used to perform sentiment analysis on the review_text column\n",
     "\n",
     "# Apply sentiment to review_text column\n",
-    "df['sentiment_result'] = df['review_text'].astype(str).apply(lambda x: sentiment_pipeline(x)[0])\n",
+    "df['sentiment_result'] = df['review_text'].astype(str).apply(lambda x: sentiment_pipeline(x)[0]) \n",
+    "#the above line applies the sentiment analysis pipeline to each review text and stores the result in a new column 'sentiment_result'\n",
+    "#astype(str) ensures that the review_text is treated as a string, even if it contains null values or other types.\n",
+    "#sentiment_pipeline(x)[0] returns the first result of the sentiment analysis, which is a dictionary containing the sentiment label and score.\n",
+    "\n",
     "df['sentiment_label'] = df['sentiment_result'].apply(lambda x: x['label'])\n",
-    "df['sentiment_score'] = df['sentiment_result'].apply(lambda x: x['score'])\n"
+    "#the above line extracts the sentiment label (e.g., 'POSITIVE' or 'NEGATIVE') from the sentiment result and stores it in a new column 'sentiment_label'\n",
+    "#apply(lambda x: x['label']) is used to extract the label from each sentiment result.\n",
+    "\n",
+    "df['sentiment_score'] = df['sentiment_result'].apply(lambda x: x['score'])\n",
+    "#the above line extracts the sentiment score (a numerical value indicating the confidence of the sentiment) from the sentiment result and stores it in a new column 'sentiment_score'\n",
+    "\n",
+    "print(df[['review_text', 'sentiment_label', 'sentiment_score',\"sentiment_result\"]].head(5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     bank_name  rating  sentiment_score\n",
+      "0  Commercial Bank of Ethiopia       1         0.976435\n",
+      "1  Commercial Bank of Ethiopia       2         0.963838\n",
+      "2  Commercial Bank of Ethiopia       3         0.959347\n",
+      "3  Commercial Bank of Ethiopia       4         0.953669\n",
+      "4  Commercial Bank of Ethiopia       5         0.960054\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg_mean = df.groupby([\"bank_name\", \"rating\"])[\"sentiment_score\"].mean().reset_index()\n",
+    "#this line groups the DataFrame by 'bank_name' and 'rating', calculates the mean sentiment score for each group, and resets the index to create a new DataFrame with the results.\n",
+    "#reset_index() is used to convert the grouped DataFrame back into a regular DataFrame format.\n",
+    "\n",
+    "print(arg_mean.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     bank_name  rating  sentiment_score\n",
+      "0  Commercial Bank of Ethiopia       1         0.976435\n",
+      "1  Commercial Bank of Ethiopia       2         0.963838\n",
+      "2  Commercial Bank of Ethiopia       3         0.959347\n",
+      "3  Commercial Bank of Ethiopia       4         0.953669\n",
+      "4  Commercial Bank of Ethiopia       5         0.960054\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rename the column for clarity (optional)\n",
+    "agg_mean.rename(columns={'sentiment_score': 'avg_sentiment_score'}, inplace=True)\n",
+    "#this line renames the 'sentiment_score' column to 'avg_sentiment_score' for clarity, indicating that it represents the average sentiment score for each group.\n",
+    "\n",
+    "# agg_df = agg_mean.rename(columns={'sentiment_score': 'average_sentiment_score'}, inplace=True)\n",
+    "print(arg_mean.head(5))"
    ]
   }
  ],
