Keyword Extraction performed

--- a/notebooks/cbe_analytics.ipynb
+++ b/notebooks/cbe_analytics.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer "
    ]
   },
   {
@@ -707,6 +708,50 @@
     "\n",
     "# agg_df = agg_mean.rename(columns={'sentiment_score': 'average_sentiment_score'}, inplace=True)\n",
     "print(arg_mean.head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thematic Analysis\n",
+    "A theme refers to a recurring concept or topic within user reviews. For this challenge, themes will help summarize user feedback into actionable categories for the banks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keyword Extraction & Manual/Rule-Based Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of keywords: 100\n",
+      "Keywords: ['account' 'after' 'all' 'am' 'amazing' 'an' 'and' 'app' 'application'\n",
+      " 'apps' 'are' 'as' 'at' 'bank' 'banking' 'be' 'best' 'but' 'by' 'can']\n"
+     ]
+    }
+   ],
+   "source": [
+    "verctorizer = TfidfVectorizer(max_features=100)\n",
+    "\n",
+    "# Fit and transform the review_text column to create a TF-IDF matrix\n",
+    "\n",
+    "tfidf_verctorized = verctorizer.fit_transform(df['review_text'].astype(str))\n",
+    "\n",
+    "keywords = verctorizer.get_feature_names_out()\n",
+    "\n",
+    "print(f\"Number of keywords: {len(keywords)}\")\n",
+    "\n",
+    "print(f\"Keywords: {keywords[:20]}\")  # Display the first 10 keywords\n"
    ]
   }
  ],
